# aspinwall-shell

./: meson.build  run-raw  run-xnest
data/: meson.build
po/: POTFILES  fr.po  ko.po  meson.build  nb_NO.po  pl.po  tr.po  update-po
src/: aspinwall-shell.in  control_panel.py  meson.build  notification_popup.py  notificationbox.py  org.dithernet.aspinwall.shell.gresource.xml  panel.py  shellmanager.py  surface.py  window_switcher.py
src/interfaces/: battery.py  manager.py  meson.build  networkmanager.py  notification.py  pulseaudio.py  window.py  x11window.py
src/stylesheet/: meson.build  style-dark.css  style-hc.css  style.css
